--- a/viewswitcher/Base.lproj/Main.storyboard
+++ b/viewswitcher/Base.lproj/Main.storyboard
@@ -39,5 +39,71 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
         </scene>
+        <!--Blue View Controller-->
+        <scene sceneID="ik4-JT-75x">
+            <objects>
+                <viewController storyboardIdentifier="Blue" id="6T7-vd-nil" customClass="BlueViewController" customModule="viewswitcher" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="6Vo-9r-eTN"/>
+                        <viewControllerLayoutGuide type="bottom" id="TwG-CF-i1Q"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="QmC-gb-CXL">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2S9-99-aiz">
+                                <rect key="frame" x="268" y="285" width="64" height="30"/>
+                                <state key="normal" title="Press Me">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="blueButtonPressed:" destination="6T7-vd-nil" eventType="touchUpInside" id="uLp-1F-GfD"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.0" green="0.0" blue="1" alpha="0.5" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="2S9-99-aiz" firstAttribute="centerY" secondItem="QmC-gb-CXL" secondAttribute="centerY" id="eD7-XU-fpE"/>
+                            <constraint firstItem="2S9-99-aiz" firstAttribute="centerX" secondItem="QmC-gb-CXL" secondAttribute="centerX" id="h9l-1F-xgi"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VHh-by-Fnx" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1226" y="506"/>
+        </scene>
+        <!--Yellow View Controller-->
+        <scene sceneID="5uh-qa-DjR">
+            <objects>
+                <viewController storyboardIdentifier="Yellow" id="MZJ-If-mEs" customClass="YellowViewController" customModule="viewswitcher" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="G5N-Zq-K26"/>
+                        <viewControllerLayoutGuide type="bottom" id="lSE-IU-dgb"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jo3-2s-L57">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p3O-Lt-s7p">
+                                <rect key="frame" x="268" y="285" width="64" height="30"/>
+                                <state key="normal" title="Press Me">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="yellowButtonPressed:" destination="MZJ-If-mEs" eventType="touchUpInside" id="J0T-gI-fUh"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstItem="p3O-Lt-s7p" firstAttribute="centerY" secondItem="jo3-2s-L57" secondAttribute="centerY" id="5eZ-J3-gUi"/>
+                            <constraint firstItem="p3O-Lt-s7p" firstAttribute="centerX" secondItem="jo3-2s-L57" secondAttribute="centerX" id="RKA-PQ-4CZ"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mei-GX-iBS" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1868" y="506"/>
+        </scene>
     </scenes>
 </document>
